--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,135 +8,135 @@ babel==2.17.0
     # via
     #   pydata-sphinx-theme
     #   sphinx
-beautifulsoup4==4.13.4
+beautifulsoup4==4.14.3
     # via pydata-sphinx-theme
 biblib-simple==0.1.2
     # via colour-checker-detection
-certifi==2025.7.14
+certifi==2025.11.12
     # via requests
-charset-normalizer==3.4.2
+charset-normalizer==3.4.4
     # via requests
-click==8.2.1 ; python_full_version < '3.13'
+click==8.3.1 ; python_full_version < '3.14'
     # via colour-checker-detection
 colorama==0.4.6 ; sys_platform == 'win32'
     # via
     #   click
     #   sphinx
-    #   tqdm
-colour-science==0.4.6
+colour-science==0.4.7
     # via colour-checker-detection
-contourpy==1.3.2
+contourpy==1.3.3
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
-docutils==0.21.2
+docutils==0.22.3
     # via
     #   pybtex-docutils
     #   pydata-sphinx-theme
     #   restructuredtext-lint
     #   sphinx
     #   sphinxcontrib-bibtex
-filelock==3.18.0 ; python_full_version < '3.13'
+filelock==3.20.0 ; python_full_version < '3.14'
     # via torch
-fonttools==4.59.0
+fonttools==4.61.0
     # via matplotlib
-fsspec==2025.7.0 ; python_full_version < '3.13'
+fsspec==2025.12.0 ; python_full_version < '3.14'
     # via torch
-idna==3.10
+idna==3.11
     # via requests
-imageio==2.37.0
-    # via
-    #   colour-checker-detection
-    #   colour-science
 imagesize==1.4.1
     # via sphinx
 jinja2==3.1.6
     # via
     #   sphinx
     #   torch
-kiwisolver==1.4.8
+joblib==1.5.2
+    # via scikit-learn
+kiwisolver==1.4.9
     # via matplotlib
 latexcodec==3.0.1
     # via pybtex
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via jinja2
-matplotlib==3.10.3
+matplotlib==3.10.7
     # via
     #   colour-checker-detection
     #   ultralytics
-mpmath==1.3.0 ; python_full_version < '3.13'
+mpmath==1.3.0 ; python_full_version < '3.14'
     # via sympy
-networkx==3.4.2 ; python_full_version < '3.13'
+networkx==3.6 ; python_full_version < '3.14'
     # via torch
-numpy==2.2.6
+numpy==2.3.5
     # via
     #   colour-checker-detection
     #   colour-science
     #   contourpy
-    #   imageio
     #   matplotlib
     #   opencv-python
-    #   pandas
+    #   openimageio
+    #   scikit-learn
     #   scipy
     #   torchvision
     #   ultralytics
     #   ultralytics-thop
-nvidia-cublas-cu12==12.6.4.1 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cublas-cu12==12.8.4.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cudnn-cu12
     #   nvidia-cusolver-cu12
     #   torch
-nvidia-cuda-cupti-cu12==12.6.80 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-cupti-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cuda-nvrtc-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-nvrtc-cu12==12.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cuda-runtime-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-runtime-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cudnn-cu12==9.5.1.17 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cudnn-cu12==9.10.2.21 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cufft-cu12==11.3.0.4 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cufft-cu12==11.3.3.83 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cufile-cu12==1.11.1.6 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cufile-cu12==1.13.1.3 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-curand-cu12==10.3.7.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-curand-cu12==10.3.9.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cusolver-cu12==11.7.1.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusolver-cu12==11.7.3.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cusparse-cu12==12.5.4.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusparse-cu12==12.5.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cusolver-cu12
     #   torch
-nvidia-cusparselt-cu12==0.6.3 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusparselt-cu12==0.7.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-nccl-cu12==2.26.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nccl-cu12==2.27.5 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-nvjitlink-cu12==12.6.85 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvjitlink-cu12==12.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cufft-cu12
     #   nvidia-cusolver-cu12
     #   nvidia-cusparse-cu12
     #   torch
-nvidia-nvtx-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvshmem-cu12==3.3.20 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-opencv-python==4.12.0.88
+nvidia-nvtx-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
+    # via torch
+opencv-python==4.11.0.86
     # via
     #   colour-checker-detection
     #   ultralytics
+openimageio==3.1.8.0
+    # via colour-checker-detection
 packaging==25.0
     # via
     #   matplotlib
     #   sphinx
-pandas==2.3.1 ; python_full_version < '3.13'
-    # via ultralytics
-pillow==11.3.0
+pillow==12.0.0
     # via
-    #   imageio
     #   matplotlib
     #   torchvision
     #   ultralytics
-psutil==7.0.0 ; python_full_version < '3.13'
+polars==1.35.2 ; python_full_version < '3.14'
     # via ultralytics
-py-cpuinfo==9.0.0 ; python_full_version < '3.13'
+polars-runtime-32==1.35.2 ; python_full_version < '3.14'
+    # via polars
+psutil==7.1.3 ; python_full_version < '3.14'
     # via ultralytics
 pybtex==0.25.1
     # via
@@ -151,40 +151,38 @@ pygments==2.19.2
     #   accessible-pygments
     #   pydata-sphinx-theme
     #   sphinx
-pyparsing==3.2.3
+pyparsing==3.2.5
     # via matplotlib
 python-dateutil==2.9.0.post0
-    # via
-    #   matplotlib
-    #   pandas
-pytz==2025.2 ; python_full_version < '3.13'
-    # via pandas
-pyyaml==6.0.2
+    # via matplotlib
+pyyaml==6.0.3
     # via
     #   pybtex
     #   ultralytics
-requests==2.32.4
+requests==2.32.5
     # via
     #   sphinx
     #   ultralytics
-restructuredtext-lint==1.4.0
+restructuredtext-lint==2.0.2
     # via colour-checker-detection
-scipy==1.15.3
+roman-numerals==3.1.0
+    # via sphinx
+scikit-learn==1.7.2
+    # via colour-checker-detection
+scipy==1.16.3
     # via
     #   colour-checker-detection
-    #   colour-science
+    #   scikit-learn
     #   ultralytics
-setuptools==80.9.0 ; (python_full_version == '3.12.*' and platform_machine != 'x86_64') or (python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux') or (python_full_version == '3.12.*' and sys_platform != 'linux')
-    # via
-    #   torch
-    #   triton
+setuptools==80.9.0 ; python_full_version >= '3.12' and python_full_version < '3.14'
+    # via torch
 six==1.17.0
     # via python-dateutil
 snowballstemmer==3.0.1
     # via sphinx
-soupsieve==2.7
+soupsieve==2.8
     # via beautifulsoup4
-sphinx==8.1.3
+sphinx==9.0.4
     # via
     #   colour-checker-detection
     #   pydata-sphinx-theme
@@ -203,33 +201,28 @@ sphinxcontrib-qthelp==2.0.0
     # via sphinx
 sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
-sympy==1.14.0 ; python_full_version < '3.13'
+sympy==1.14.0 ; python_full_version < '3.14'
     # via torch
-tomli==2.2.1 ; python_full_version < '3.11'
-    # via sphinx
-torch==2.7.1 ; python_full_version < '3.13'
+threadpoolctl==3.6.0
+    # via scikit-learn
+torch==2.9.1 ; python_full_version < '3.14'
     # via
     #   torchvision
     #   ultralytics
     #   ultralytics-thop
-torchvision==0.22.1 ; python_full_version < '3.13'
+torchvision==0.24.1 ; python_full_version < '3.14'
     # via ultralytics
-tqdm==4.67.1 ; python_full_version < '3.13'
-    # via ultralytics
-triton==3.3.1 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+triton==3.5.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-typing-extensions==4.14.1
+typing-extensions==4.15.0
     # via
     #   beautifulsoup4
     #   colour-checker-detection
-    #   colour-science
     #   pydata-sphinx-theme
     #   torch
-tzdata==2025.2 ; python_full_version < '3.13'
-    # via pandas
-ultralytics==8.3.168 ; python_full_version < '3.13'
+ultralytics==8.3.235 ; python_full_version < '3.14'
     # via colour-checker-detection
-ultralytics-thop==2.0.14 ; python_full_version < '3.13'
+ultralytics-thop==2.0.18 ; python_full_version < '3.14'
     # via ultralytics
-urllib3==2.5.0
+urllib3==2.6.0
     # via requests
