--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ accessible-pygments==0.0.5
     # via pydata-sphinx-theme
 alabaster==1.0.0
     # via sphinx
-anyio==4.9.0
+anyio==4.12.0
     # via
     #   httpx
     #   jupyter-server
@@ -12,15 +12,15 @@ appnope==0.1.4 ; sys_platform == 'darwin'
     # via ipykernel
 argon2-cffi==25.1.0
     # via jupyter-server
-argon2-cffi-bindings==21.2.0
+argon2-cffi-bindings==25.1.0
     # via argon2-cffi
-arrow==1.3.0
+arrow==1.4.0
     # via isoduration
-asttokens==3.0.0
+asttokens==3.0.1
     # via stack-data
 async-lru==2.0.5
     # via jupyterlab
-attrs==25.3.0
+attrs==25.4.0
     # via
     #   jsonschema
     #   referencing
@@ -31,30 +31,29 @@ babel==2.17.0
     #   sphinx
 backports-tarfile==1.2.0 ; python_full_version < '3.12'
     # via jaraco-context
-beautifulsoup4==4.13.4
+backports-zstd==1.2.0 ; python_full_version < '3.14'
+    # via hatch
+beautifulsoup4==4.14.3
     # via
     #   nbconvert
     #   pydata-sphinx-theme
 biblib-simple==0.1.2
     # via colour-checker-detection
-bleach==6.2.0
+bleach==6.3.0
     # via nbconvert
-certifi==2025.7.14
+certifi==2025.11.12
     # via
     #   httpcore
     #   httpx
     #   requests
-cffi==1.17.1
+cffi==2.0.0
     # via
     #   argon2-cffi-bindings
     #   cryptography
     #   pyzmq
-    #   zstandard
-cfgv==3.4.0
-    # via pre-commit
-charset-normalizer==3.4.2
+charset-normalizer==3.4.4
     # via requests
-click==8.2.1
+click==8.3.1
     # via
     #   colour-checker-detection
     #   hatch
@@ -65,25 +64,24 @@ colorama==0.4.6 ; sys_platform == 'win32'
     #   ipython
     #   pytest
     #   sphinx
-    #   tqdm
-colour-science==0.4.6
+colour-science==0.4.7
     # via colour-checker-detection
-comm==0.2.2
+comm==0.2.3
     # via
     #   ipykernel
     #   ipywidgets
-contourpy==1.3.2
+contourpy==1.3.3
     # via matplotlib
-coverage==7.9.2
+coverage==7.12.0
     # via
     #   coveralls
     #   pytest-cov
-coveralls==4.0.1
-cryptography==45.0.5 ; sys_platform == 'linux'
+coveralls==4.0.2
+cryptography==46.0.3 ; sys_platform == 'linux'
     # via secretstorage
 cycler==0.12.1
     # via matplotlib
-debugpy==1.8.15
+debugpy==1.8.17
     # via ipykernel
 decorator==5.2.1
     # via ipython
@@ -93,7 +91,7 @@ distlib==0.4.0
     # via virtualenv
 docopt==0.6.2
     # via coveralls
-docutils==0.21.2
+docutils==0.22.3
     # via
     #   pybtex-docutils
     #   pydata-sphinx-theme
@@ -101,31 +99,26 @@ docutils==0.21.2
     #   restructuredtext-lint
     #   sphinx
     #   sphinxcontrib-bibtex
-exceptiongroup==1.3.0 ; python_full_version < '3.11'
-    # via
-    #   anyio
-    #   ipython
-    #   pytest
-execnet==2.1.1
+execnet==2.1.2
     # via pytest-xdist
-executing==2.2.0
+executing==2.2.1
     # via stack-data
-fastjsonschema==2.21.1
+fastjsonschema==2.21.2
     # via nbformat
-filelock==3.18.0
+filelock==3.20.0
     # via
     #   torch
     #   virtualenv
-fonttools==4.59.0
+fonttools==4.61.0
     # via matplotlib
 fqdn==1.5.1
     # via jsonschema
-fsspec==2025.7.0 ; python_full_version < '3.13'
+fsspec==2025.12.0 ; python_full_version < '3.14'
     # via torch
 h11==0.16.0
     # via httpcore
-hatch==1.14.1
-hatchling==1.27.0
+hatch==1.16.2
+hatchling==1.28.0
     # via hatch
 httpcore==1.0.9
     # via httpx
@@ -137,37 +130,33 @@ hyperlink==21.0.0
     # via hatch
 id==1.5.0
     # via twine
-identify==2.6.12
-    # via pre-commit
-idna==3.10
+idna==3.11
     # via
     #   anyio
     #   httpx
     #   hyperlink
     #   jsonschema
     #   requests
-imageio==2.37.0
-    # via
-    #   colour-checker-detection
-    #   colour-science
 imagesize==1.4.1
     # via sphinx
 importlib-metadata==8.7.0 ; python_full_version < '3.12'
     # via keyring
-iniconfig==2.1.0
+iniconfig==2.3.0
     # via pytest
-invoke==2.2.0
-ipykernel==6.29.5
+invoke==2.2.1
+ipykernel==7.1.0
     # via
     #   jupyter
     #   jupyter-console
     #   jupyterlab
-ipython==8.37.0
+ipython==9.8.0
     # via
     #   ipykernel
     #   ipywidgets
     #   jupyter-console
-ipywidgets==8.1.7
+ipython-pygments-lexers==1.1.1
+    # via ipython
+ipywidgets==8.1.8
     # via jupyter
 isoduration==20.11.0
     # via jsonschema
@@ -175,7 +164,7 @@ jaraco-classes==3.4.0
     # via keyring
 jaraco-context==6.0.1
     # via keyring
-jaraco-functools==4.2.1
+jaraco-functools==4.3.0
     # via keyring
 jedi==0.19.2
     # via ipython
@@ -191,16 +180,18 @@ jinja2==3.1.6
     #   nbconvert
     #   sphinx
     #   torch
-json5==0.12.0
+joblib==1.5.2
+    # via scikit-learn
+json5==0.12.1
     # via jupyterlab-server
 jsonpointer==3.0.0
     # via jsonschema
-jsonschema==4.25.0
+jsonschema==4.25.1
     # via
     #   jupyter-events
     #   jupyterlab-server
     #   nbformat
-jsonschema-specifications==2025.4.1
+jsonschema-specifications==2025.9.1
     # via jsonschema
 jupyter==1.1.1
 jupyter-client==8.6.3
@@ -211,7 +202,7 @@ jupyter-client==8.6.3
     #   nbclient
 jupyter-console==6.6.3
     # via jupyter
-jupyter-core==5.8.1
+jupyter-core==5.9.1
     # via
     #   ipykernel
     #   jupyter-client
@@ -223,9 +214,9 @@ jupyter-core==5.8.1
     #   nbformat
 jupyter-events==0.12.0
     # via jupyter-server
-jupyter-lsp==2.2.6
+jupyter-lsp==2.3.0
     # via jupyterlab
-jupyter-server==2.16.0
+jupyter-server==2.17.0
     # via
     #   jupyter-lsp
     #   jupyterlab
@@ -234,51 +225,51 @@ jupyter-server==2.16.0
     #   notebook-shim
 jupyter-server-terminals==0.5.3
     # via jupyter-server
-jupyterlab==4.4.4
+jupyterlab==4.5.0
     # via
     #   jupyter
     #   notebook
 jupyterlab-pygments==0.3.0
     # via nbconvert
-jupyterlab-server==2.27.3
+jupyterlab-server==2.28.0
     # via
     #   jupyterlab
     #   notebook
-jupyterlab-widgets==3.0.15
+jupyterlab-widgets==3.0.16
     # via ipywidgets
-keyring==25.6.0
+keyring==25.7.0
     # via
     #   hatch
     #   twine
-kiwisolver==1.4.8
+kiwisolver==1.4.9
     # via matplotlib
-lark==1.2.2
+lark==1.3.1
     # via rfc3987-syntax
 latexcodec==3.0.1
     # via pybtex
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
     # via rich
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via
     #   jinja2
     #   nbconvert
-matplotlib==3.10.3
+matplotlib==3.10.7
     # via
     #   colour-checker-detection
     #   ultralytics
-matplotlib-inline==0.1.7
+matplotlib-inline==0.2.1
     # via
     #   ipykernel
     #   ipython
 mdurl==0.1.2
     # via markdown-it-py
-mistune==3.1.3
+mistune==3.1.4
     # via nbconvert
-more-itertools==10.7.0
+more-itertools==10.8.0
     # via
     #   jaraco-classes
     #   jaraco-functools
-mpmath==1.3.0 ; python_full_version < '3.13'
+mpmath==1.3.0 ; python_full_version < '3.14'
     # via sympy
 nbclient==0.10.2
     # via nbconvert
@@ -293,77 +284,83 @@ nbformat==5.10.4
     #   nbconvert
 nest-asyncio==1.6.0
     # via ipykernel
-networkx==3.4.2 ; python_full_version < '3.13'
+networkx==3.6 ; python_full_version < '3.14'
     # via torch
-nh3==0.3.0
+nh3==0.3.2
     # via readme-renderer
 nodeenv==1.9.1
-    # via
-    #   pre-commit
-    #   pyright
-notebook==7.4.4
+    # via pyright
+notebook==7.5.0
     # via jupyter
 notebook-shim==0.2.4
     # via
     #   jupyterlab
     #   notebook
-numpy==2.2.6
+numpy==2.3.5
     # via
     #   colour-checker-detection
     #   colour-science
     #   contourpy
-    #   imageio
     #   matplotlib
+    #   numpy-typing-compat
     #   opencv-python
-    #   pandas
+    #   openimageio
+    #   optype
+    #   scikit-learn
     #   scipy
     #   torchvision
     #   ultralytics
     #   ultralytics-thop
-nvidia-cublas-cu12==12.6.4.1 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+numpy-typing-compat==20250818.2.3
+    # via optype
+nvidia-cublas-cu12==12.8.4.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cudnn-cu12
     #   nvidia-cusolver-cu12
     #   torch
-nvidia-cuda-cupti-cu12==12.6.80 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-cupti-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cuda-nvrtc-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-nvrtc-cu12==12.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cuda-runtime-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-runtime-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cudnn-cu12==9.5.1.17 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cudnn-cu12==9.10.2.21 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cufft-cu12==11.3.0.4 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cufft-cu12==11.3.3.83 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cufile-cu12==1.11.1.6 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cufile-cu12==1.13.1.3 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-curand-cu12==10.3.7.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-curand-cu12==10.3.9.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cusolver-cu12==11.7.1.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusolver-cu12==11.7.3.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-cusparse-cu12==12.5.4.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusparse-cu12==12.5.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cusolver-cu12
     #   torch
-nvidia-cusparselt-cu12==0.6.3 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusparselt-cu12==0.7.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-nccl-cu12==2.26.2 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nccl-cu12==2.27.5 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-nvidia-nvjitlink-cu12==12.6.85 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvjitlink-cu12==12.8.93 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   nvidia-cufft-cu12
     #   nvidia-cusolver-cu12
     #   nvidia-cusparse-cu12
     #   torch
-nvidia-nvtx-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvshmem-cu12==3.3.20 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-opencv-python==4.12.0.88
+nvidia-nvtx-cu12==12.8.90 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
+    # via torch
+opencv-python==4.11.0.86
     # via
     #   colour-checker-detection
     #   ultralytics
-optype==0.9.3
+openimageio==3.1.8.0
+    # via colour-checker-detection
+optype==0.14.0
     # via scipy-stubs
-overrides==7.7.0
+overrides==7.7.0 ; python_full_version < '3.12'
     # via jupyter-server
 packaging==25.0
     # via
@@ -379,11 +376,9 @@ packaging==25.0
     #   pytest
     #   sphinx
     #   twine
-pandas==2.3.1 ; python_full_version < '3.13'
-    # via ultralytics
 pandocfilters==1.5.1
     # via nbconvert
-parso==0.8.4
+parso==0.8.5
     # via jedi
 pathspec==0.12.1
     # via hatchling
@@ -391,13 +386,12 @@ pexpect==4.9.0
     # via
     #   hatch
     #   ipython
-pillow==11.3.0
+pillow==12.0.0
     # via
-    #   imageio
     #   matplotlib
     #   torchvision
     #   ultralytics
-platformdirs==4.3.8
+platformdirs==4.5.1
     # via
     #   hatch
     #   jupyter-core
@@ -407,14 +401,18 @@ pluggy==1.6.0
     #   hatchling
     #   pytest
     #   pytest-cov
-pre-commit==4.2.0
-prometheus-client==0.22.1
+polars==1.35.2 ; python_full_version < '3.14'
+    # via ultralytics
+polars-runtime-32==1.35.2 ; python_full_version < '3.14'
+    # via polars
+prek==0.2.19
+prometheus-client==0.23.1
     # via jupyter-server
-prompt-toolkit==3.0.51
+prompt-toolkit==3.0.52
     # via
     #   ipython
     #   jupyter-console
-psutil==7.0.0
+psutil==7.1.3
     # via
     #   ipykernel
     #   ultralytics
@@ -424,15 +422,13 @@ ptyprocess==0.7.0
     #   terminado
 pure-eval==0.2.3
     # via stack-data
-py-cpuinfo==9.0.0 ; python_full_version < '3.13'
-    # via ultralytics
 pybtex==0.25.1
     # via
     #   pybtex-docutils
     #   sphinxcontrib-bibtex
 pybtex-docutils==1.0.3
     # via sphinxcontrib-bibtex
-pycparser==2.22
+pycparser==2.23 ; implementation_name != 'PyPy'
     # via cffi
 pydata-sphinx-theme==0.16.1
     # via colour-checker-detection
@@ -440,6 +436,7 @@ pygments==2.19.2
     # via
     #   accessible-pygments
     #   ipython
+    #   ipython-pygments-lexers
     #   jupyter-console
     #   nbconvert
     #   pydata-sphinx-theme
@@ -447,41 +444,37 @@ pygments==2.19.2
     #   readme-renderer
     #   rich
     #   sphinx
-pyparsing==3.2.3
+pyparsing==3.2.5
     # via matplotlib
-pyright==1.1.403
-pytest==8.4.1
+pyproject-hooks==1.2.0
+    # via hatch
+pyright==1.1.407
+pytest==9.0.2
     # via
     #   pytest-cov
     #   pytest-xdist
-pytest-cov==6.2.1
+pytest-cov==6.3.0
 pytest-xdist==3.8.0
 python-dateutil==2.9.0.post0
     # via
     #   arrow
     #   jupyter-client
     #   matplotlib
-    #   pandas
-python-json-logger==3.3.0
+python-json-logger==4.0.0
     # via jupyter-events
-pytz==2025.2 ; python_full_version < '3.13'
-    # via pandas
-pywin32==311 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'
-    # via jupyter-core
 pywin32-ctypes==0.2.3 ; sys_platform == 'win32'
     # via keyring
-pywinpty==2.0.15 ; os_name == 'nt'
+pywinpty==3.0.2 ; os_name == 'nt' and sys_platform != 'darwin' and sys_platform != 'linux'
     # via
     #   jupyter-server
     #   jupyter-server-terminals
     #   terminado
-pyyaml==6.0.2
+pyyaml==6.0.3
     # via
     #   jupyter-events
-    #   pre-commit
     #   pybtex
     #   ultralytics
-pyzmq==27.0.0
+pyzmq==27.1.0
     # via
     #   ipykernel
     #   jupyter-client
@@ -489,12 +482,12 @@ pyzmq==27.0.0
     #   jupyter-server
 readme-renderer==44.0
     # via twine
-referencing==0.36.2
+referencing==0.37.0
     # via
     #   jsonschema
     #   jsonschema-specifications
     #   jupyter-events
-requests==2.32.4
+requests==2.32.5
     # via
     #   coveralls
     #   id
@@ -505,7 +498,7 @@ requests==2.32.4
     #   ultralytics
 requests-toolbelt==1.0.0
     # via twine
-restructuredtext-lint==1.4.0
+restructuredtext-lint==2.0.2
     # via colour-checker-detection
 rfc3339-validator==0.1.4
     # via
@@ -519,21 +512,25 @@ rfc3986-validator==0.1.1
     #   jupyter-events
 rfc3987-syntax==1.1.0
     # via jsonschema
-rich==14.0.0
+rich==14.2.0
     # via
     #   hatch
     #   twine
-rpds-py==0.26.0
+roman-numerals==3.1.0
+    # via sphinx
+rpds-py==0.30.0
     # via
     #   jsonschema
     #   referencing
-scipy==1.15.3
+scikit-learn==1.7.2
+    # via colour-checker-detection
+scipy==1.16.3
     # via
     #   colour-checker-detection
-    #   colour-science
+    #   scikit-learn
     #   ultralytics
-scipy-stubs==1.15.3.0
-secretstorage==3.3.3 ; sys_platform == 'linux'
+scipy-stubs==1.16.3.2
+secretstorage==3.5.0 ; sys_platform == 'linux'
     # via keyring
 send2trash==1.8.3
     # via jupyter-server
@@ -541,20 +538,17 @@ setuptools==80.9.0
     # via
     #   jupyterlab
     #   torch
-    #   triton
 shellingham==1.5.4
     # via hatch
 six==1.17.0
     # via
     #   python-dateutil
     #   rfc3339-validator
-sniffio==1.3.1
-    # via anyio
 snowballstemmer==3.0.1
     # via sphinx
-soupsieve==2.7
+soupsieve==2.8
     # via beautifulsoup4
-sphinx==8.1.3
+sphinx==9.0.4
     # via
     #   colour-checker-detection
     #   pydata-sphinx-theme
@@ -575,34 +569,31 @@ sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
 stack-data==0.6.3
     # via ipython
-sympy==1.14.0 ; python_full_version < '3.13'
+sympy==1.14.0 ; python_full_version < '3.14'
     # via torch
 terminado==0.18.1
     # via
     #   jupyter-server
     #   jupyter-server-terminals
+threadpoolctl==3.6.0
+    # via scikit-learn
 tinycss2==1.4.0
     # via bleach
 toml==0.10.2
-tomli==2.2.1 ; python_full_version <= '3.11'
-    # via
-    #   coverage
-    #   hatchling
-    #   jupyterlab
-    #   pytest
-    #   sphinx
+tomli==2.3.0 ; python_full_version <= '3.11'
+    # via coverage
 tomli-w==1.2.0
     # via hatch
 tomlkit==0.13.3
     # via hatch
-torch==2.7.1 ; python_full_version < '3.13'
+torch==2.9.1 ; python_full_version < '3.14'
     # via
     #   torchvision
     #   ultralytics
     #   ultralytics-thop
-torchvision==0.22.1 ; python_full_version < '3.13'
+torchvision==0.24.1 ; python_full_version < '3.14'
     # via ultralytics
-tornado==6.5.1
+tornado==6.5.2
     # via
     #   ipykernel
     #   jupyter-client
@@ -610,11 +601,8 @@ tornado==6.5.1
     #   jupyterlab
     #   notebook
     #   terminado
-tqdm==4.67.1 ; python_full_version < '3.13'
-    # via ultralytics
 traitlets==5.14.3
     # via
-    #   comm
     #   ipykernel
     #   ipython
     #   ipywidgets
@@ -628,62 +616,51 @@ traitlets==5.14.3
     #   nbclient
     #   nbconvert
     #   nbformat
-triton==3.3.1 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+triton==3.5.1 ; python_full_version < '3.14' and platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-trove-classifiers==2025.5.9.12
+trove-classifiers==2025.12.1.14
     # via hatchling
-twine==6.1.0
-types-python-dateutil==2.9.0.20250708
-    # via arrow
-typing-extensions==4.14.1
+twine==6.2.0
+typing-extensions==4.15.0
     # via
     #   anyio
-    #   async-lru
     #   beautifulsoup4
     #   colour-checker-detection
-    #   colour-science
-    #   exceptiongroup
     #   ipython
-    #   mistune
     #   optype
     #   pydata-sphinx-theme
     #   pyright
     #   referencing
-    #   rich
     #   torch
-tzdata==2025.2 ; python_full_version < '3.13'
-    # via pandas
-ultralytics==8.3.168 ; python_full_version < '3.13'
+tzdata==2025.2
+    # via arrow
+ultralytics==8.3.235 ; python_full_version < '3.14'
     # via colour-checker-detection
-ultralytics-thop==2.0.14 ; python_full_version < '3.13'
+ultralytics-thop==2.0.18 ; python_full_version < '3.14'
     # via ultralytics
 uri-template==1.3.0
     # via jsonschema
-urllib3==2.5.0
+urllib3==2.6.0
     # via
     #   requests
     #   twine
 userpath==1.9.2
     # via hatch
-uv==0.8.0
+uv==0.9.16
     # via hatch
-virtualenv==20.31.2
-    # via
-    #   hatch
-    #   pre-commit
-wcwidth==0.2.13
+virtualenv==20.35.4
+    # via hatch
+wcwidth==0.2.14
     # via prompt-toolkit
-webcolors==24.11.1
+webcolors==25.10.0
     # via jsonschema
 webencodings==0.5.1
     # via
     #   bleach
     #   tinycss2
-websocket-client==1.8.0
+websocket-client==1.9.0
     # via jupyter-server
-widgetsnbextension==4.0.14
+widgetsnbextension==4.0.15
     # via ipywidgets
 zipp==3.23.0 ; python_full_version < '3.12'
     # via importlib-metadata
-zstandard==0.23.0
-    # via hatch
