--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ dependencies = [
     "opencv-python>=4,<5",
     "scipy>=1.13.0,<2",
     "typing-extensions>=4,<5",
+    "matplotlib>=3.10.8",
+    "rawpy>=0.25.1",
+    "ultralytics>=8.3.241",
+    "scikit-learn>=1.8.0",
 ]
 
 [project.optional-dependencies]
