--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     "rawpy>=0.25.1",
     "ultralytics>=8.3.241",
     "scikit-learn>=1.8.0",
+    "psutil>=7.2.0",
 ]
 
 [project.optional-dependencies]
