--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "ultralytics>=8.3.241",
     "scikit-learn>=1.8.0",
     "psutil>=7.2.0",
+    "pre-commit>=4.5.1",
 ]
 
 [project.optional-dependencies]
