--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,10 @@ dependencies = [
     "typing-extensions>=4,<5",
     "matplotlib>=3.10.8",
     "rawpy>=0.25.1",
-    "ultralytics>=8.3.241",
     "scikit-learn>=1.8.0",
     "psutil>=7.2.0",
     "pre-commit>=4.5.1",
+    "pip-licenses>=5.5.0",
 ]
 
 [project.optional-dependencies]
