--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ colorchecker-pipeline = { workspace = true }
 [dependency-groups]
 dev = [
     "colorchecker-pipeline",
+    "commitizen>=4.11.0",
     "coverage",
     "coveralls",
     "hatch",
