--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,42 +144,25 @@ addopts = "-n auto --dist=loadscope --durations=5"
 target-version = "py311"
 line-length = 88
 [tool.ruff.lint]
-select = ["ALL"]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "UP", # pyupgrade
+    "N",  # pep8-naming
+]
 ignore = [
-    "C", # Pylint - Convention
-    "C90", # mccabe
-    "COM", # flake8-commas
-    "ERA", # eradicate
-    "FBT", # flake8-boolean-trap
-    "FIX", # flake8-fixme
-    "PT", # flake8-pytest-style
-    "PTH", # flake8-use-pathlib [Enable]
-    "TD", # flake8-todos
-    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
-    "D200", # One-line docstring should fit on one line
-    "D202", # No blank lines allowed after function docstring
-    "D205", # 1 blank line required between summary line and description
-    "D301", # Use `r"""` if any backslashes in a docstring
-    "D400", # First line should end with a period
-    "I001", # Import block is un-sorted or un-formatted
-    "N801", # Class name `.*` should use CapWords convention
-    "N802", # Function name `.*` should be lowercase
-    "N803", # Argument name `.*` should be lowercase
-    "N806", # Variable `.*` in function should be lowercase
-    "N813", # Camelcase `.*` imported as lowercase `.*`
-    "N815", # Variable `.*` in class scope should not be mixedCase
-    "N816", # Variable `.*` in global scope should not be mixedCase
-    "NPY002", # Replace legacy `np.random.random` call with `np.random.Generator`
-    "PGH003", # Use specific rule codes when ignoring type issues
-    "PLR0912", # Too many branches
-    "PLR0913", # Too many arguments in function definition
-    "PLR0915", # Too many statements
-    "PLR2004", # Magic value used in comparison, consider replacing `.*` with a constant variable
-    "PYI036", # Star-args in `.*` should be annotated with `object`
-    "PYI051", # `Literal[".*"]` is redundant in a union with `str`
-    "PYI056", # Calling `.append()` on `__all__` may not be supported by all type checkers (use `+=` instead)
-    "RUF022", # [*] `__all__` is not sorted
-    "TRY003", # Avoid specifying long messages outside the exception class
+    "N802", # Function name should be lowercase
+    "N803", # Argument name should be lowercase
+    "N806", # Variable in function should be lowercase
+    "N812", # Lowercase imported as non-lowercase
+    "N813", # Camelcase imported as lowercase
+    "N815", # Variable in class scope should not be mixedCase
+    "N816", # Variable in global scope should not be mixedCase
+    "B008", # Do not perform function call in argument defaults
+    "E501", # Line too long
 ]
 typing-modules = ["colour.hints"]
 
